tests/regression/errors/basic/undefined_var_16.csd
// Undefined variable test 16
vibez.spill("Using undefined:", undefined_var_16)
sus result drip = missing_variable + 16
